--- a/components/com_jshopping/payments/pm_fk/composer.json
+++ b/components/com_jshopping/payments/pm_fk/composer.json
@@ -1,13 +1,12 @@
 {
-  "require": {
-    "php": ">=7.2"
-  },
-  "autoload": {
-    "psr-4": {
-      "Suvarivaza\\JoomShopping\\FreeKassa\\": "src/"
-    },
-    "files": [
-      "helpers/functions.php"
-    ]
-  }
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Suvarivaza\\Joomshopping\\FreeKassa\\": "src/"
+        },
+
+        "files": [
+            "helpers/functions.php"
+        ]
+    }
 }
